<resources>
    <string name="app_name">Parka</string>
    <string name="open_drawer">Open menu</string>
    <string name="cloes_drawer">Cloes menu</string>
    <string name="mess_end_time">26/08/2018 8:09 pm</string>
    <string name="mess_start_time">26/08/2018 12:15 pm</string>
    <string name="position_message">Position: 2</string>
    <string name="zone_message">Zone: Pink</string>
    <string name="floor_message">Floor: 10B</string>
    <string name="building_message">Building: 14 Floor Building</string>
    <string name="hello_tvName">Firstname</string>
    <string name="hello_tvSurname">Lastname</string>
    <string name="tvHello">Hello</string>
    <string name="tvRegister_name">Name</string>
    <string name="tvRegister_surname">Surname</string>
    <string name="tvRegister_telNumber">Tel-number</string>
    <string name="tvRegister_email">E-mail</string>
    <string name="tvRegister_userName">Username</string>
    <string name="tvRegister_password">Password</string>
    <string name="tvRegister_rePassword">Re-password</string>
    <string name="btn_submit_register">SUBMIT</string>
    <string name="content_between_dateTime">-</string>
    <string name="text_logout">Logout</string>
    <string name="please_input_info">*</string>
    <string name="text_help">Help</string>
    <string name="tv_help_1st">1. Open Bluetooth for use Parka.</string>
    <string name="tv_help_2nd">2. The best location of your smart phone is on the console.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_text_register">Register</string>
    <string name="btn_text_login">Login</string>
    <string name="text_re_password">Re-Password</string>
    <string name="parked_header">Parked History</string>
    <string name="location">KMUTT</string>
    <string name="title_activity_welcome">Parka</string>
</resources>
