<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_message"
    android:background="@drawable/message_box"
    android:orientation="vertical"
    android:padding="@dimen/mess_box_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPosition"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/position_message" />

        <TextView
            android:id="@+id/tvZone"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/zone_message" />

        <TextView
            android:id="@+id/tvFloor"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/floor_message" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvBuilding"
        style="@style/header_font_size_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/building_message" />

    <LinearLayout
        android:id="@+id/dateTimeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvStartTime"
            style="@style/mess_time_martop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/mess_start_time" />

        <TextView
            android:id="@+id/tvDat"
            style="@style/mess_time_martop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/content_between_dateTime" />

        <TextView
            android:id="@+id/tvEndTime"
            style="@style/mess_time_martop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/mess_end_time" />


    </LinearLayout>


</LinearLayout>