<?xml version="1.0" encoding="utf-8"?><!-- -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoAppLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/login_logo_parka" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="@dimen/editText_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:background="@drawable/bg_radius_field"
            android:padding="@dimen/padd_field"
            android:layout_marginBottom="@dimen/margin_buttom_field"
            android:hint="@string/hint_username" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/editText_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/bg_radius_field"
            android:padding="@dimen/padd_field"
            android:hint="@string/hint_password"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        style="@style/header_font_size_title"
        android:layout_width="@dimen/editText_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:background="@drawable/bg_radius_btn"
        android:text="@string/btn_text_login"
        android:enabled="false"
        android:onClick="Login"
        tools:ignore="OnClick" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/tvRegis_margin_buttom"
            android:background="@color/alpha_color"
            android:text="@string/btn_text_register"
            android:onClick="Register"
            tools:ignore="OnClick" />
    </FrameLayout>


</LinearLayout>






