<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_message"
    android:background="@drawable/message_box"
    android:orientation="vertical"
    android:padding="@dimen/mess_box_padding"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPostionBuilding"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="Position: " />
    <TextView
        android:id="@+id/tvPosition"
        style="@style/header_font_size_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/mess_margin_right"
        android:text="@string/position_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvZoneBuilding"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="Zone: " />

    <TextView
        android:id="@+id/tvZone"
        style="@style/header_font_size_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/mess_margin_right"
        android:text="@string/zone_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFloorBuilding"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="Floor: " />

        <TextView
            android:id="@+id/tvFloor"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/floor_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLocation"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="Building: " />

        <TextView
            android:id="@+id/tvBuilding"
            style="@style/header_font_size_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/building_message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateStartTimeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartTime"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="Time: " />


        <TextView
            android:id="@+id/tvStartTimeHere"
            style="@style/header_font_size_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mess_margin_right"
            android:text="@string/mess_start_time" />
    </LinearLayout>

</LinearLayout>
