<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout_help"
    tools:context=".activity.HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/first_margin_buttom">


            <include
                android:id="@+id/toolbarHelp"
                layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/first_layout_margin"
                android:background="@drawable/bg_radius_white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/header_font_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/second_layout_margin"
                        android:gravity="center"
                        android:text="@string/text_help" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_seclayout_inside"
                    android:paddingBottom="@dimen/padding_buttom_inside">

                    <TextView
                        style="@style/header_font_size_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/second_layout_margin"
                        android:text="@string/tv_help_1st" />

                    <TextView
                        style="@style/header_font_size_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/second_layout_margin"
                        android:text="@string/tv_help_2nd" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.v4.widget.DrawerLayout>